fix(footer) : gestion du style footer overflow

--- a/V3-glass/css/main.css
+++ b/V3-glass/css/main.css
@@ -25,7 +25,6 @@ body {
 }
 
 .card {
-    flex: 1 0 120px;
     height: 100%;
     margin: auto;
     border-radius: 16px;
@@ -246,9 +245,6 @@ body {
 }
 
 
-.card.duolingo {
-    flex: 1 0;
-}
 .card.duolingo a {
     width: 100%;
     height: 100%;
